added footer ans subscription

--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,15 @@
     <script type="text/javascript" src="scripts/main.js"></script>
   </head>
   <body>
+    <!-- header -->
     <header class="header">
       <input type="checkbox"
-          name="toggler"
-          id="menu"
-          class="header__toggler"
+               name="toggler"
+               id="menu"
+               class="header__toggler"
         >
-      <label for="menu" class="header__button">
-        <span class="header__button-item"></span>
+      <label for="menu" class="header__btn">
+        <span class="header__btn-item"></span>
       </label>
       <div class="menu header__menu">
         <img
@@ -62,6 +63,7 @@
       </div>
     </header>
 
+    <!-- main -->
     <main>
       <section class="main">
         <div class="main__information">
@@ -74,6 +76,148 @@
         </div>
         <div class="main__image"></div>
       </section>
+
+      <selection class="subscription container__subscription">
+        <div class="subscription__wrapper">
+          <h2 class="subscription__title" id="subscription">Підписка</h2>
+          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form class="subscription__email">
+            <input
+              type="email"
+              id="email"
+              class="subscription__field"
+              name="email-field"
+              placeholder="E-mail"
+              required
+            >
+            <button type="submit" class="subscription__button button button--sub"></button>
+          </form>
+        </div>
+      </selection>
     </main>
+    <!-- footer -->
+    <div class="container">
+
+      <section class="footer" id="info">
+
+        <div class="footer__top">
+
+          <div class="footer__top-left">
+
+            <div class="footer__icons">
+              <a href="#">
+                <img
+              src="./images/NA MU.png"
+              class="footer__logo logo"
+              alt="logo namu"
+            >
+              </a>
+              <div class="footer__network-icons">
+                <a href="https://www.facebook.com">
+                  <img
+                src="./images/Facebook.png"
+                class="footer__icon footer__icon--a"
+                alt="facebook"
+              >
+                </a>
+                <a href="https://www.instagram.com/">
+                  <img
+                src="./images/inst.png"
+                class="footer__icon"
+                alt="instagram"
+              >
+                </a>
+              </div>
+            </div>
+
+            <div class="footer__info">
+              <p class="footer__time">Графік роботи<br><br>
+                <span class="footer__time-bold">12:00 — 20:00</span> середа<br>
+                <span class="footer__time-bold">12:00 — 20:00</span> четвер<br>
+                <span class="footer__time-bold">12:00 — 20:00</span> п’ятниця<br>
+                <span class="footer__time-bold">11:00 — 19:00</span> субота<br>
+                <span class="footer__time-bold">11:00 — 19:00</span> неділя<br>
+                <br><br>
+                <span class="footer__time-bold">Вихідні:</span>
+            понеділок, вівторок.
+            Каса припиняє роботу за 1 годину
+            до закриття музею.
+              </p>
+              <p class="footer__contacts">Контакти:<br><br>
+                <a
+              target="https://goo.gl/maps/C9f2VqxXuE4FYY467"
+              class="footer__map"
+              href="https://goo.gl/maps/C9f2VqxXuE4FYY467">вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <br>
+                <a
+              href="tel:+38 (044) 278-13-57"
+              class="footer__contacts-link"
+            >
+              тел. +38 (044) 278-13-57<br>
+                </a>
+                <a
+              href="tel:+38 (044) 278-74-54"
+              class="footer__contacts-link"
+            >
+              факс +38 (044) 278-74-54<br>
+                </a>
+                <a
+              href="mailto:info@namu.kiev.ua"
+              class="footer__contacts-link"
+            >
+              e-mail: info@namu.kiev.ua
+                </a>
+              </p>
+            </div>
+          </div>
+
+          <div class="footer__line">
+            <a href="#" class="footer__button button button--foot">↑</a>
+          </div>
+
+          <div class="footer__menu">
+            <nav>
+              <ul class="footer__list">
+                <li class="footer__item">
+                  <a href="#gallery" class="footer__link">Галерея</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#info" class="nav__link">Про Нас</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#events" class="nav__link">Виставки та події</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#subscription" class="nav__link">Магазин</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#info" class="nav__link">Відвідування</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#subscription" class="nav__link">Блог</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#subscription" class="nav__link">Стати нашим другом</a>
+                </li>
+                <li class="footer__item">
+                  <a href="#info" class="footer__link">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+
+        <div class="footer__bottom">
+          <p>Designed by Zhyriada Marina</p>
+          <p>Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </section>
+    </div>
+</footer>
+
+
+
+
   </body>
 </html>
