--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,110 @@
       </div>
     </div>
     <footer class="footer">
-
+      <div class="footer__content">
+        <h2 class="footer__title">Підписка</h2>
+        <span class="footer__text">
+          Бути в курсі всіх актуальних<br> подій та останніх новин.
+        </span>
+        <form
+          class="footer__forms"
+          method="POST"
+          action="#"
+          name="hi"
+        >
+          <input
+            class="footer__form footer__mail"
+            type="email"
+            placeholder="E-mail"
+            name="email"
+            id="email"
+          >
+          <button class="footer__button cursor">
+            <img src="./images/footerbut.png" alt=">">
+          </button>
+        </form>
+      </div>
+      <div class="footer__nav">
+        <div>
+          <div class="footer__adres">
+            <div class="footer__top">
+              <a class="footer__logo" href="/">NA <br>MU</a>
+              <div class="footer__mesenger" >
+                <a
+                  class="footer__mes"
+                  target="blank"
+                  href=""
+                >
+                  <img
+                    class="footer__facb"
+                    src="./images/instagram.svg"
+                    alt="instagram">
+                </a>
+                <a
+                  class="footer__mes"
+                  target="blank"
+                  href=""
+                >
+                  <img
+                    class="footer__inst"
+                    src="./images/instagram.svg"
+                    alt="instagram">
+                </a>
+              </div>
+            </div>
+            <div class="footer__navig">
+              <div class="footer__days">
+                <div class="footer__day">
+                  <span class="footer__work">
+                    <p class="footer__bold">12:00-20:00</p>&nbsp;среда
+                  </span>
+                  <span class="footer__work">
+                    <p class="footer__bold">12:00-20:00</p>&nbsp;четверг
+                  </span>
+                  <span class="footer__work">
+                    <p class="footer__bold">12:00-20:00</p>&nbsp;п’ятниця
+                  </span>
+                  <span class="footer__work">
+                    <p class="footer__bold">11:00-19:00</p>&nbsp;суббота
+                  </span>
+                  <span class="footer__work">
+                    <p class="footer__bold">11:00-19:00</p>&nbsp;неділя
+                  </span>
+                </div>
+                <span class="footer__bolds">Вихідні: понеділок, вівторок<br> Каса припиняє роботу<br> за 1 годину<br> до закриття музею.</span>
+              </div>
+              <div class="footer__linke">
+                <a href="https://www.google.com/maps/place/%D0%9D%D0%B0%D1%86%D0%B8%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9+%D1%85%D1%83%D0%B4%D0%BE%D0%B6%D0%B5%D1%81%D1%82%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9+%D0%BC%D1%83%D0%B7%D0%B5%D0%B9+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D1%8B/@50.4494106,30.5296757,18z/data=!4m5!3m4!1s0x40d4ce524453048d:0x549e3a34119f524f!8m2!3d50.4493269!4d30.5304215">
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a href="tel:+38 (044) 278-13-57">
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a href="https://www.paygofax.com/?name=NA%20MU&company=Musseum&fax=380442787454">
+                  факс +38 (044) 278-74-54
+                </a>
+                <a href="mailto:info@namu.kiev.ua"> e-mail: info@namu.kiev.ua</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer__menu">
+          <ul class="footer__list">
+            <a class="footer__link" href="">Галерея</a>
+            <a class="footer__link" href="">Виставки та події</a>
+            <a class="footer__link" href="">Відвідування</a>
+            <a class="footer__link" href="">Стати нашим другом</a>
+            <a class="footer__link" href="">Про Нас</a>
+            <a class="footer__link" href="">Магазин</a>
+            <a class="footer__link" href="">Блог</a>
+            <a class="footer__link" href="">Контакти</a>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        <p>Designed by Zhyriada Marina</p>
+        <p>Copyright © 2027. All Rights Reserved.</p>
+      </div>
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
