--- a/src/index.html
+++ b/src/index.html
@@ -77,8 +77,8 @@
         class="main__photo-center"
       >
     </div>
-    <main class="main">
-      <div class="main__footer-galery">
+    <main class="main-footer">
+      <div class="main-footer__galery">
         <img src="images/Rectangle 13.8.png"
           alt="photo"
           class="main__footer-galery-photo"
@@ -105,6 +105,13 @@
         >
       </div>
     </main>
+    <div class="main__photo-footer-container">
+      <img
+        src="images/Rectangle_22.1.png"
+        alt="photo"
+        class="main__photo-center"
+      >
+    </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
