--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <script src="scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <section class="header__content">
+
+        <div class="header__wrapper grid">
+          <div class="icon grid__item--1-2">
+            <a href="#menu" class="icon--menu"></a>
+          </div>
+          <div class="header__title grid__item--1-2 grid__item--tablet--1-3 grid__item--laptop--3-7">
+            <span class="header__title-style-1">ХУДОЖ</span><span class="header__title-style-1 header__title-style-2">НІЙ</span><br> <span class="header__title-style-1">МУЗЕЙ</span>
+
+          </div>
+          <div class="container container__button grid__item--1-2 grid__item--tablet--1-2 grid__item--laptop--3-5">
+            <div class="header__button">
+              <div class="header__button-tickets">
+                КВИТКИ
+              </div>
+              <div class="header__button-square">&gt;
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+
+
+      </section>
+
+      <section class="header__logo logo">
+        <p class="logo__text">NA<br>MU</p>
+      </section>
+
+      <section class="header__promo">
+      </section>
+
+    </header>
+    <nav class="page__menu menu" id="menu">
+      <div class="menu__content">
+        <div class="icon">
+          <a href="#" class="icon--cross"></a>
+        </div>
+        <ul class="nav">
+          <li class="nav__item">
+            <a href="#" class="nav__link">Галерея</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Виставки та події</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Відвідування</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Стати нашим другом</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Про Нас</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Блог</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Контакти</a>
+          </li>
+        </ul>
+        <div class="icon">
+          <a href="#" class="icon--search"></a>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+    </main>
+    <footer class="footer">
+    </footer>
   </body>
 </html>
