--- a/src/index.html
+++ b/src/index.html
@@ -81,37 +81,45 @@
       <div class="main-footer__galery">
         <img src="images/Rectangle 13.8.png"
           alt="photo"
-          class="main__footer-galery-photo"
+          class="main-footer__galery-photo"
         >
         <img src="images/Rectangle 3.2.png"
           alt="photo"
-          class="main__footer-galery-photo"
+          class="main-footer__galery-photo"
         >
         <img src="images/Rectangle 24.png"
           alt="photo"
-          class="main__footer-galery-photo"
+          class="main-footer__galery-photo"
         >
         <img src="images/Rectangle 13.6.png"
           alt="photo"
-          class="main__footer-galery-photo"
+          class="main-footer__galery-photo"
         >
         <img src="images/Rectangle 13.7.png"
           alt="photo"
-          class="main__footer-galery-photo"
+          class="main-footer__galery-photo"
         >
         <img src="images/Rectangle 25.png"
           alt="photo"
-          class="main__footer-galery-photo"
+          class="main-footer__galery-photo"
         >
       </div>
     </main>
-    <div class="main__photo-footer-container">
-      <img
-        src="images/Rectangle_22.1.png"
-        alt="photo"
-        class="main__photo-center"
-      >
+    <div class="main-photo-footer">
+      <div class="main-photo-footer__container">
+        <span class="main-photo-footer__title">
+          Підписка
+        </span>
+        <span class="main-photo-footer__subtitle">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </span>
+        <div>
+          <input type="email">
+          <button></button>
+        </div>
+      </div>
     </div>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
