--- a/src/index.html
+++ b/src/index.html
@@ -1,87 +1,220 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="shortcut icon"
+      href="./images/NA-MU.svg"
+      type="image/x-icon"
+    >
   </head>
-  <body>
-    <page class="page">
-      <div class="container">
-        <header class="header" id="Home">
-          <div class="header__background">
-            <h2 class="header__title">
-              ХУДОЖ<strong>НІЙ</strong>
-              МУЗЕЙ
-            </h2>
-          </div>
-          <div class="hamburger"></div>
+  <body class="page__body">
+
+    <ul class="burger-menu">
+      <li class="burger-menu__item">
+        <a href="#Home" class="burger-menu__link">На головну</a>
+      </li>
+      <li class="burger-menu__item">
+        <a href="#Actual" class="burger-menu__link">Актуальні події</a>
+      </li>
+      <li class="burger-menu__item">
+        <a href="#Gallery" class="burger-menu__link">Галерея</a>
+      </li>
+      <li class="burger-menu__item">
+        <a href="#Subscribe" class="burger-menu__link">Підписка</a>
+      </li>
+      <li class="burger-menu__item">
+        <a href="#Contact" class="burger-menu__link">Контакти</a>
+      </li>
+      <li class="burger-menu__item">
+        <a href="tel:+38 (044) 278-13-57" class="burger-menu__link">+38 (044) 278-13-57</a>
+      </li>
+    </ul>
+
+    <header class="header" id="Home">
+      <div class="header__container">
+        <div class="header__nav">
+          <div class="header__hamburger"></div>
           <div class="header__logo">
             <a href="#Home" class="header__logo-link">
-              NA MU
+              <img
+                src="./images/NA-MU.svg"
+                alt="NAMU logo"
+                class="header__logo-img"
+              >
             </a>
           </div>
-          <ul class="burger-menu">
-            <li class="burger-menu__item">
-              <a href="#Home" class="burger-menu__link">На головну</a>
-            </li>
-            <li class="burger-menu__item">
-              <a href="#Actual" class="burger-menu__link">Актуальні події</a>
-            </li>
-            <li class="burger-menu__item">
-              <a href="#Gallery" class="burger-menu__link">Галерея</a>
-            </li>
-            <li class="burger-menu__item">
-              <a href="#Subscribe" class="burger-menu__link">Підписка</a>
-            </li>
-            <li class="burger-menu__item">
-              <a href="#Contact" class="burger-menu__link">Контакти</a>
-            </li>
-            <li class="burger-menu__item">
-              <a href="tel:+38 (044) 278-13-57" class="burger-menu__link">+38 (044) 278-13-57</a>
-            </li>
-          </ul>
-        </header>
-        <div>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quo et omnis commodi aspernatur autem, tempore
-          quisquam exercitationem culpa minus molestias, ea pariatur dignissimos sit? Illo doloribus repellat dolor autem
-          fugit possimus vero, repudiandae totam ipsam. Similique quisquam culpa illum iste, beatae dicta. Laudantium
-          quidem voluptatum commodi dolore fuga rerum, praesentium iure deleniti earum? Quas, dolore molestiae sequi
-          sapiente labore molestias perferendis maiores. Rerum ipsa voluptatem facere incidunt harum iure eum molestias
-          officiis corporis atque! A officia architecto dolore repellat reiciendis, eos mollitia veritatis vel nihil,
-          aliquid nulla eius perferendis, iste ipsa in accusamus facilis beatae quaerat totam aperiam porro corrupti
-          cupiditate adipisci? Fuga, natus eligendi. Facere explicabo quisquam fuga accusamus voluptatibus voluptate sequi
-          minus laudantium placeat mollitia temporibus magni, molestias quos sint quaerat eos error quas. Rem accusamus
-          libero a suscipit aliquid fugit neque alias optio, necessitatibus illum, consectetur deserunt odio? At laborum
-          facere eius natus saepe quo ducimus est sed suscipit animi hic cupiditate dignissimos odit iste dicta laudantium
-          vero aut, accusantium ullam beatae! Facere molestias beatae facilis tempore laudantium rerum commodi, delectus
-          veritatis suscipit maiores ex distinctio dolore provident reprehenderit maxime sequi, modi fugiat! Voluptatum
-          quaerat illum quidem? Cupiditate aliquam neque porro beatae. Quia ab aspernatur sit ea nesciunt, est temporibus
-          dicta vitae, autem consequatur soluta minima, atque possimus? Iusto eaque ipsam fugiat deserunt voluptatem ea
-          maiores enim distinctio nemo inventore. Magnam, illum repellendus! Voluptatum quas facilis minus iure odit ut
-          tenetur sit neque praesentium ab earum qui, corrupti a animi consequuntur deserunt modi? Reprehenderit, at
-          eveniet. Odit magnam repellendus natus facere dignissimos officiis rerum? Doloremque optio est, molestiae
-          accusantium omnis aperiam praesentium quod beatae repellat voluptatem sit et impedit unde placeat accusamus
-          aspernatur, similique perferendis inventore recusandae. Asperiores ipsam exercitationem sint, numquam quasi
-          natus corrupti voluptatum, eveniet autem magnam alias neque officia porro cupiditate, dicta voluptatibus dolorem
-          modi sequi quod vitae dolore sit ullam. Modi culpa dolores numquam fugiat nemo provident sapiente nesciunt,
-          dolorem illo neque debitis, quam iusto explicabo hic? Voluptate, magni dolorem. Suscipit dicta eos fugiat
-          sapiente consequuntur nobis, nisi vero a odio hic omnis praesentium dolorem voluptatem excepturi itaque ipsam.
-          Inventore porro doloremque ipsa odit deserunt, quibusdam enim deleniti obcaecati, ullam sed expedita rem
-          nesciunt minus veritatis ducimus dolore. Eum obcaecati impedit deleniti molestiae at praesentium explicabo harum
-          voluptate ut quos, optio labore. Impedit quo, quis exercitationem distinctio dicta tenetur pariatur? Consectetur
-          suscipit nostrum inventore, eveniet dolorem illum harum eaque cupiditate deleniti alias, molestias saepe ipsa.
-          Eveniet hic, molestias laudantium maiores cupiditate quibusdam est libero voluptates corrupti distinctio. Facere
-          velit optio quos! Obcaecati velit blanditiis numquam perferendis amet. Cupiditate temporibus officiis saepe
-          perspiciatis dolore, neque doloribus voluptate nihil iusto veritatis ipsa. Omnis magni cumque explicabo mollitia
-          eligendi neque saepe, aliquam deserunt iste rerum suscipit asperiores eaque quasi corporis dicta quae
-          consequatur molestias harum voluptate veniam itaque culpa quo! Hic optio rem nisi at incidunt aliquid
-          exercitationem quia expedita eum sit impedit magni voluptate esse cumque ipsam quae atque aspernatur ipsum quas
-          consequatur quaerat, harum tenetur excepturi alias! Non, enim aut. Animi, similique magni.
+          <div class="header__search"></div>
         </div>
       </div>
-    </page>
+    </header>
+
+    <main class="main">
+      <h1 class="main__title">
+        ХУДОЖНІЙ МУЗЕЙ
+      </h1>
+
+      <div class="main__button">
+        <div class="main__button-name">
+          Квитки
+        </div>
+        <a
+          href="http://old.namu.kiev.ua/ua/educational-programs/prices.html"
+          target="blank"
+          rel="noopener"
+        >
+          <div class="main__button-buy">
+            >
+          </div>
+        </a>
+      </div>
+
+      <div class="events">
+
+        <h2 class="events__title">
+          Актуальні події
+        </h2>
+        <div class="events__card">
+          <a
+            href="https://lh3.googleusercontent.com/proxy/9HkY6KkJaeM519vimgl5xoEC3JFp7P87sn7Sh-aa3X6EplHP7sBYi9CFNHMPjUMKH15CdM4Oi_eqdnUZKwivsPLZAgIE8r3Rc2xXTPQdSFMkhB4l"
+            target="blank"
+            rel="noopener"
+          >
+            <img
+            src="./images/events-photo-1.png"
+            alt="landscape with trees and sea"
+            class="events__card-photo"
+            >
+          </a>
+          <div class="events__card-info">
+            <div class="events__card-info-type">
+              Виставка
+            </div>
+            <div class="events__card-info-date">
+              26.08-29.11.2019
+            </div>
+          </div>
+          <div class="events__card-title">
+            Йду і повертаюсь
+          </div>
+          <div class="events__card-description">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+          </div>
+        </div>
+
+        <div class="events__card">
+          <a
+            href="https://i.pinimg.com/200x150/2d/db/d5/2ddbd55a5c523aa63a12f376644a3860.jpg"
+            target="blank"
+            rel="noopener"
+          >
+            <img
+            src="./images/events-photo-2.png"
+            alt="women sitting near the Peacock"
+            class="events__card-photo"
+            >
+          </a>
+
+          <div class="events__card-info">
+            <div class="events__card-info-type">
+              Виставка
+            </div>
+            <div class="events__card-info-date">
+              26.08-29.11.2019
+            </div>
+          </div>
+          <div class="events__card-title">
+            І спогади і мрії
+          </div>
+          <div class="events__card-description">
+            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </div>
+        </div>
+
+      </div>
+
+      <div class="lection">
+        <div class="lection__container">
+          <div class="lection__container-block">
+            <span class="lection__container-block-type">
+              Лекція
+            </span>
+            <span class="lection__container-block-date">
+              26/08/2019 - 11:00
+            </span>
+          </div>
+          <div class="lection__container-title">
+            Від класицизму до романтизму
+          </div>
+        </div>
+      </div>
+
+      <footer class="footer">
+
+        <div class="footer__bottom">
+          <span class="footer__bottom-text">
+            Copyright © 2019. All Rights Reserved.
+          </span>
+          <span class="footer__bottom-text">
+            Designed by Zhyriada Marina
+          </span>
+        </div>
+      </footer>
+
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="header__logo">
+          <a href="#Home" class="header__logo-link">
+            NA MU
+          </a>
+        </div>
+        <div class="header__search"></div>
+
+
+
+      <div class="header__background">
+
+        <h2 class="header__title">
+          ХУДОЖ<strong class="header__title-strongtext">НІЙ</strong>
+          МУЗЕЙ
+        </h2>
+
+      </div>
+
+      <div class="header__button">
+      <div class="header__button-name">
+        Квитки
+      </div>
+      <a href="http://old.namu.kiev.ua/ua/educational-programs/prices.html" target="blank" rel="noopener">
+        <div class="header__button-buy">
+          >
+        </div>
+      </a>
+
+    </div>
+
+    <div class="header__events">
+      <span class="header__events-text">
+        Події
+      </span>
+      <span class="header__events-line"></span>
+    </div> -->
 
 
     <script type="text/javascript" src="scripts/main.js"></script>
