--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,59 @@
           </div>
         </section>
       </div>
+      <section class="lecture">
+        <div class="lecture__background">
+          <div class="lecture__item">
+            <div class="lecture__head">
+              <div class="lecture__info">ЛЕКЦІЯ</div>
+              <div class="lecture__time">26/08/2019 - 11:00</div>
+            </div>
+            <h3 class="lecture__text">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section><div class="container">
+      <section class="gallery">
+        <h2 class="gallery__title" id="gallery">Галерея</h2>
+        <div class="gallery__wrapper">
+          <img
+            src="images/gallery/1.jpg"
+            alt="arts"
+            class="gallery__picture gallery__picture--1"
+          >
+          <img
+            src="images/gallery/2.jpg"
+            alt="arts"
+            class="gallery__picture gallery__picture--2"
+          >
+          <img
+            src="images/gallery/3.jpg"
+            alt="arts"
+            class="gallery__picture gallery__picture--3"
+          >
+          <img
+            src="images/gallery/4.jpg"
+            alt="arts"
+            class="gallery__picture gallery__picture--4"
+          >
+          <img
+            src="images/gallery/5.jpg"
+            alt="arts"
+            class="gallery__picture gallery__picture--5"
+          >
+          <img
+            src="images/gallery/6.jpg"
+            alt="arts"
+            class="gallery__picture gallery__picture--6"
+          >
+        </div>
+        <div class="gallery__slider">
+          <div class="gallery__circle"></div>
+          <div class="gallery__circle"></div>
+          <div class="gallery__circle"></div>
+          <div class="gallery__circle"></div>
+        </div>
+      </section>
+    </div>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
