--- a/src/index.html
+++ b/src/index.html
@@ -113,13 +113,18 @@
         <span class="main-photo-footer__subtitle">
           Бути в курсі всіх актуальних подій та останніх новин.
         </span>
-        <div>
-          <input type="email">
-          <button></button>
+        <div class="main-photo-footer__input-container">
+          <input type="email" class="main-photo-footer__input"
+            placeholder="E-mail"
+          >
+          <button
+            class="main-photo-footer__button"
+          >
+            &#10095;
+          </button>
         </div>
       </div>
     </div>
-
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
