--- a/src/index.html
+++ b/src/index.html
@@ -83,50 +83,173 @@
             <h3 class="lecture__text">Від класицизму до романтизму</h3>
           </div>
         </div>
-      </section><div class="container">
-      <section class="gallery">
-        <h2 class="gallery__title" id="gallery">Галерея</h2>
-        <div class="gallery__wrapper">
-          <img
-            src="images/gallery/1.jpg"
-            alt="arts"
-            class="gallery__picture gallery__picture--1"
-          >
-          <img
-            src="images/gallery/2.jpg"
-            alt="arts"
-            class="gallery__picture gallery__picture--2"
-          >
-          <img
-            src="images/gallery/3.jpg"
-            alt="arts"
-            class="gallery__picture gallery__picture--3"
-          >
-          <img
-            src="images/gallery/4.jpg"
-            alt="arts"
-            class="gallery__picture gallery__picture--4"
-          >
-          <img
-            src="images/gallery/5.jpg"
-            alt="arts"
-            class="gallery__picture gallery__picture--5"
-          >
-          <img
-            src="images/gallery/6.jpg"
-            alt="arts"
-            class="gallery__picture gallery__picture--6"
-          >
-        </div>
-        <div class="gallery__slider">
-          <div class="gallery__circle"></div>
-          <div class="gallery__circle"></div>
-          <div class="gallery__circle"></div>
-          <div class="gallery__circle"></div>
+      </section>
+      <div class="container">
+        <section class="gallery">
+          <h2 class="gallery__title" id="gallery">Галерея</h2>
+          <div class="gallery__wrapper">
+            <img
+              src="images/gallery/1.jpg"
+              alt="arts"
+              class="gallery__picture gallery__picture--1"
+            >
+            <img
+              src="images/gallery/2.jpg"
+              alt="arts"
+              class="gallery__picture gallery__picture--2"
+            >
+            <img
+              src="images/gallery/3.jpg"
+              alt="arts"
+              class="gallery__picture gallery__picture--3"
+            >
+            <img
+              src="images/gallery/4.jpg"
+              alt="arts"
+              class="gallery__picture gallery__picture--4"
+            >
+            <img
+              src="images/gallery/5.jpg"
+              alt="arts"
+              class="gallery__picture gallery__picture--5"
+            >
+            <img
+              src="images/gallery/6.jpg"
+              alt="arts"
+              class="gallery__picture gallery__picture--6"
+            >
+          </div>
+          <div class="gallery__slider">
+            <div class="gallery__circle"></div>
+            <div class="gallery__circle"></div>
+            <div class="gallery__circle"></div>
+            <div class="gallery__circle"></div>
+          </div>
+        </section>
+      </div>
+      <section class="subscription container__subscription">
+        <div class="subscription__wrapper">
+          <h2 class="subscription__title" id="subscription">Підписка</h2>
+          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form class="subscription__email">
+            <input
+              type="email"
+              id="email"
+              class="subscription__field"
+              name="email-field"
+              placeholder="E-mail"
+              required
+            >
+            <button type="submit" class="subscription__button button button--sub"></button>
+          </form>
         </div>
       </section>
-    </div>
     </main>
+    <footer>
+      <div class="container">
+        <section class="footer" id="info">
+          <div class="footer__top">
+            <div class="footer__top-left">
+              <div class="footer__icons">
+                <a href="#">
+                  <img
+                    src="./images/NA_MU.png"
+                    class="footer__logo logo"
+                    alt="logo namu"
+                  >
+                </a>
+                <div class="footer__network-icons">
+                  <a href="https://www.facebook.com">
+                    <img
+                      src="./images/Facebook.svg"
+                      class="footer__icon footer__icon--a"
+                      alt="link to facebook"
+                    >
+                  </a>
+                  <a href="https://www.instagram.com">
+                    <img
+                      src="./images/instagram.svg"
+                      class="footer__icon"
+                      alt="link to instagram"
+                    >
+                  </a>
+                </div>
+              </div>
+              <div class="footer__info">
+                <p class="footer__time">Графік роботи<br><br>
+                  <span class="footer__time-bold">12:00 — 20:00</span> середа<br>
+                  <span class="footer__time-bold">12:00 — 20:00</span> четвер<br>
+                  <span class="footer__time-bold">12:00 — 20:00</span> п’ятниця<br>
+                  <span class="footer__time-bold">11:00 — 19:00</span> субота<br>
+                  <span class="footer__time-bold">11:00 — 19:00</span> неділя<br>
+                  <br><br>
+                  <span class="footer__time-bold">Вихідні</span>
+                  понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+                <p class="footer__contacts">Контакти:<br><br>
+                  вул. М. Грушевського, 6; Київ, 01001<br>
+                  <a
+                    href="tel:+38 (044) 278-13-57"
+                    class="footer__contacts-link"
+                  >
+                    тел. +38 (044) 278-13-57<br>
+                  </a>
+                  <a
+                    href="tel:+38 (044) 278-74-54"
+                    class="footer__contacts-link"
+                  >
+                    факс +38 (044) 278-74-54<br>
+                  </a>
+                  <a
+                    href="mailto:info@namu.kiev.ua"
+                    class="footer__contacts-link"
+                  >
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </p>
+              </div>
+            </div>
+            <div class="footer__line"></div>
+            <div class="footer__menu">
+              <nav>
+                <ul class="footer__list">
+                  <li class="footer__item">
+                    <a href="#gallery" class="footer__link">Галерея</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#info" class="nav__link">Про Нас</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#events" class="nav__link">Виставки та події</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#subscription" class="nav__link">Магазин</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#info" class="nav__link">Відвідування</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#subscription" class="nav__link">Блог</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#subscription" class="nav__link">Стати нашим другом</a>
+                  </li>
+                  <li class="footer__item">
+                    <a href="#info" class="nav__link">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+          <div class="footer__bottom">
+            <p>Designed by Zhyriada Marina</p>
+            <p>Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </section>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
