--- a/src/index.html
+++ b/src/index.html
@@ -126,20 +126,74 @@
         <h3 class="main__title">
           Галерея
         </h3>
-        <div class="gallery">
-          <img
-            class="gallery__image"
-            src="./images/gallery-1.jpg"
-            alt="ukrainian woman"
+        <article class="slider">
+          <input
+            class="slider__button"
+            checked
+            type="radio"
+            name="slider"
+            id="switch1"
+          >
+          <input
+            class="slider__button"
+            type="radio"
+            name="slider"
+            id="switch2"
+          >
+          <input
+            class="slider__button"
+            type="radio"
+            name="slider"
+            id="switch3"
+          >
+          <input
+            class="slider__button"
+            type="radio"
+            name="slider"
+            id="switch4"
           >
 
-          <div class="gallery__circles">
-            <div class="gallery__circle is-active"></div>
-            <div class="gallery__circle"></div>
-            <div class="gallery__circle"></div>
-            <div class="gallery__circle"></div>
+          <div class="slider__slides">
+            <div class="slider__overflow">
+              <div class="images">
+                <article>
+                  <img
+                    class="slider__image"
+                    src="./images/gallery-1.jpg"
+                    alt="image gallery"
+                  >
+                </article>
+                <article>
+                  <img
+                    class="slider__image"
+                    src="./images/gallery-2.jpg"
+                    alt="image gallery"
+                  >
+                </article>
+                <article>
+                  <img
+                    class="slider__image"
+                    src="./images/gallery-3.jpg"
+                    alt="image gallery"
+                  >
+                </article>
+                <article>
+                  <img
+                    class="slider__image"
+                    src="./images/gallery-4.jpg"
+                    alt="image gallery"
+                  >
+                </article>
+              </div>
+            </div>
           </div>
-        </div>
+          <div class="active">
+            <label class="lable" for="switch1"></label>
+            <label class="lable" for="switch2"></label>
+            <label class="lable" for="switch3"></label>
+            <label class="lable" for="switch4"></label>
+          </div>
+        </article>
       </section>
     </main>
 
@@ -168,11 +222,13 @@
       </section>
 
       <section class="footer__bottom">
-        <div class="container">
+        <div class="top-container">
           <div class="title-container">
-            <h1 class="image__title">na<br>mu</h1>
+            <h1 class="top-title">
+              na<br>mu
+            </h1>
           </div>
-          <div class="link">
+          <div class="top-link">
             <img
               class="link__facebook"
               src="./images/Facebook.svg"
