--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,36 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__top">
-        <div class="header__menu"></div>
-        <a class="header__logo" href="/">NA <br>MU</a>
+      <a class="header__logoss" href="/">NA <br>MU</a>
+      <div class="header__1">
+        <div class="header__topss">
+          <div class="header__menuss"></div>
+          <h1 class="header__titless">ХУДОЖ<span class="header__modss">НІЙ</span><br> МУЗЕЙ</h1>
+          <div class="header__buyss">
+            <div class="header__textss">КВИТКИ</div>
+            <a href="/" class="header__storss">
+              <img src="../src/images/Vector(1).png" alt="buy">
+            </a>
+          </div>
+        </div>
+        <img
+            class="header__foto-topss "
+            src="./images/Natsionalnij.jpeg"
+            alt="background"
+          >
       </div>
-      <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-      <div class="header__buy">
-        <div class="header__text">КВИТКИ</div>
-        <a href="/" class="header__stor">
-          <img src="../src/images/Vector(1).png" alt="buy">
-        </a>
+      <div class="header__2">
+        <div class="header__top">
+          <div class="header__menu"></div>
+          <a class="header__logo" href="/">NA <br>MU</a>
+        </div>
+        <h1 class="header__title">ХУДОЖНІЙ<br> МУЗЕЙ</h1>
+        <div class="header__buy">
+          <div class="header__text">КВИТКИ</div>
+          <a href="/" class="header__stor">
+            <img src="../src/images/Vector(1).png" alt="buy">
+          </a>
+        </div>
       </div>
     </header>
     <main class="main">
@@ -46,11 +66,13 @@
                 15.03-29.06.2027
               </a>
             </div>
-            <h3 class="card__title">
-              Йду і повертаюсь
-            </h3>
-            <div class="card__content">
-              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини <br> 1980-1995 років.
+            <div class="card__text">
+              <h3 class="card__title">
+                Йду і повертаюсь
+              </h3>
+              <div class="card__content">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини <br> 1980-1995 років.
+              </div>
             </div>
           </div>
           <div class="card">
@@ -65,11 +87,13 @@
                 15.03-29.06.2027
               </a>
             </div>
-            <h3 class="card__title">
-              І спогади і мрії
-            </h3>
-            <div class="card__content">
-              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            <div class="card__text">
+              <h3 class="card__title">
+                І спогади і мрії
+              </h3>
+              <div class="card__content">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </div>
             </div>
           </div>
         </div>
@@ -88,47 +112,49 @@
           </h3>
         </div>
       </div>
-    </main>
-    <div class="gallery">
-      <h2 class="gallery__title">
-        Галерея
-      </h2>
-      <div class="img-slider swiper-container mySwiper">
-        <div class="img-slider__wraper swiper-wrapper">
-          <div class="img-slider__slide swiper-slide">
-            <div class="img-slider__imege">
-              <img src="./images/Rectangle6.jpg" alt="Картина">
+      <div class="gallery">
+        <h2 class="gallery__title">
+          Галерея
+        </h2>
+        <div class="img-slider swiper-container mySwiper">
+          <div class="img-slider__wraper swiper-wrapper">
+            <div class="img-slider__slide swiper-slide">
+              <div class="img-slider__imege">
+                <img src="./images/Rectangle6.jpg" alt="Картина">
+              </div>
+            </div>
+            <div class="img-slider__slide swiper-slide">
+              <div class="img-slider__imege">
+                <img src="./images/Rectangle7.jpg" alt="Картина">
+              </div>
+            </div>
+            <div class="img-slider__slide swiper-slide">
+              <div class="img-slider__imege">
+                <img src="./images/Rectangle8.jpeg" alt="Картина">
+              </div>
+            </div>
+            <div class="img-slider__slide swiper-slide">
+              <div class="img-slider__imege">
+                <img src="./images/Rectangle9.jpg" alt="Картина">
+              </div>
+            </div>
+            <div class="img-slider__slide swiper-slide">
+              <div class="img-slider__imege">
+                <img src="./images/Rectangle10.jpg" alt="Картина">
+              </div>
+            </div>
+            <div class="img-slider__slide swiper-slide">
+              <div class="img-slider__imege">
+                <img src="./images/Rectangle11.jpeg" alt="Картина">
+              </div>
             </div>
           </div>
-          <div class="img-slider__slide swiper-slide">
-            <div class="img-slider__imege">
-              <img src="./images/Rectangle7.jpg" alt="Картина">
-            </div>
-          </div>
-          <div class="img-slider__slide swiper-slide">
-            <div class="img-slider__imege">
-              <img src="./images/Rectangle8.jpeg" alt="Картина">
-            </div>
-          </div>
-          <div class="img-slider__slide swiper-slide">
-            <div class="img-slider__imege">
-              <img src="./images/Rectangle9.jpg" alt="Картина">
-            </div>
-          </div>
-          <div class="img-slider__slide swiper-slide">
-            <div class="img-slider__imege">
-              <img src="./images/Rectangle10.jpg" alt="Картина">
-            </div>
-          </div>
-          <div class="img-slider__slide swiper-slide">
-            <div class="img-slider__imege">
-              <img src="./images/Rectangle11.jpeg" alt="Картина">
-            </div>
+          <div class="img-slider__swiper-pagination" >
+            <div class="swiper-pagination"></div>
           </div>
         </div>
-        <div class="img-slider__swiper-pagination swiper-pagination"></div>
       </div>
-    </div>
+    </main>
     <footer class="footer">
       <div class="footer__content">
         <h2 class="footer__title">Підписка</h2>
@@ -165,9 +191,9 @@
                   href=""
                 >
                   <img
-                    class="footer__facb"
-                    src="./images/instagram.svg"
-                    alt="instagram">
+                  class="footer__facb"
+                  src="./images/facebook.svg"
+                  alt="instagram">
                 </a>
                 <a
                   class="footer__mes"
