--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,44 @@
           </div>
         </div>
       </section>
+      <!-- gallery -->
+      <div class="container">
+        <section class="gallery">
+          <h2 class="gallery__title" id="gallery">Галерея</h2>
+          <div class="gallery__wrapper">
+            <img
+              src="./images/gallery-1.png"
+              alt="photo gallery"
+              class="gallery__picture gallery__picture--1"
+            >
+            <img
+              src="./images/gallery-2.png"
+              alt="photo gallery"
+              class="gallery__picture gallery__picture--2"
+            >
+            <img
+              src="./images/gallery-3.png"
+              alt="photo gallery"
+              class="gallery__picture gallery__picture--3"
+            >
+            <img
+              src="./images/gallery-4.png"
+              alt="photo gallery"
+              class="gallery__picture gallery__picture--4"
+            >
+            <img
+              src="./images/gallery-5.png"
+              alt="photo gallery"
+              class="gallery__picture gallery__picture--5"
+            >
+            <img
+              src="./images/gallery-6.png"
+              alt="photo gallery"
+              class="gallery__picture gallery__picture--6"
+            >
+          </div>
+        </section>
+      </div>
       <selection class="subscription container__subscription">
         <div class="subscription__wrapper">
           <h2 class="subscription__title" id="subscription">Підписка</h2>
