--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="shortcut icon"
+      href="icons/favicon-museum.png"
+      type="image/png"
+    >
     <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
-    <header class="header">
+    <header class="header" id="header">
       <section class="header__content">
 
         <div class="header__wrapper grid">
@@ -21,20 +26,22 @@
             <span class="header__title-style-1">ХУДОЖ</span><span class="header__title-style-1 header__title-style-2">НІЙ</span><br> <span class="header__title-style-1">МУЗЕЙ</span>
 
           </div>
-          <div class="container container__button grid__item--1-2 grid__item--tablet--1-2 grid__item--laptop--3-5">
+          <div class="container container__flex-center container__button grid__item--1-2 grid__item--tablet--1-2 grid__item--laptop--3-5">
             <div class="header__button">
               <div class="header__button-tickets">
                 КВИТКИ
               </div>
-              <div class="header__button-square">&gt;
+              <div class="header__button-square">
+                <a href="#footer" class="header__button-square">&gt;</a>
               </div>
             </div>
           </div>
-
+          <div class="header__events">
+            <p class="header__events--title">
+              ПОДІЇ
+            </p>
+          </div>
         </div>
-
-
-
 
       </section>
 
@@ -46,32 +53,33 @@
       </section>
 
     </header>
+
     <nav class="page__menu menu" id="menu">
-      <div class="menu__content">
+      <div class="menu__content container">
         <div class="icon">
           <a href="#" class="icon--cross"></a>
         </div>
         <ul class="nav">
           <li class="nav__item">
-            <a href="#" class="nav__link">Галерея</a>
+            <a href="#gallery" class="nav__link">Галерея</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Виставки та події</a>
+            <a href="#actuals" class="nav__link">Виставки та події</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Відвідування</a>
+            <a href="#actuals" class="nav__link">Відвідування</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Стати нашим другом</a>
+            <a href="#signup" class="nav__link">Стати нашим другом</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Про Нас</a>
+            <a href="#contacts" class="nav__link">Про Нас</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Блог</a>
+            <a href="#contacts" class="nav__link">Блог</a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Контакти</a>
+            <a href="#contacts" class="nav__link">Контакти</a>
           </li>
         </ul>
         <div class="icon">
@@ -81,8 +89,237 @@
     </nav>
 
     <main>
+      <section class="page__actuals actuals" id="actuals">
+        <h2 class="actuals__title container">
+          Актуальні події
+        </h2>
+        <div class="actuals__block actuals__block--1 grid container">
+          <div class="actuals__place--picture actuals__block--order-1 grid__item--1-2 grid__item--tablet--1-6 grid__item--laptop--1-7">
+            <img
+              src="images/event-picture-1.png"
+              alt="picture"
+              class="picture"
+            >
+          </div>
+          <div class="actuals__place--description actuals__block--order-2  grid__item--1-2 grid__item--tablet--1-4 grid__item--laptop--9-12">
+            <span class="actuals__place--event-name">ВИСТАВКА</span>
+            <span class="actuals__place--event-date">26.08-29.11.2019</span>
+            <h3 class="actuals__place--title">Йду і повертаюсь</h3>
+            <article class="actuals__place--article">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </article>
+          </div>
+        </div>
+
+        <div class="actuals__block actuals__block--2 grid container">
+          <div class="actuals__place--picture actuals__block--order-2 grid__item--1-2 grid__item--tablet--1-6 grid__item--laptop--6-12">
+            <img
+              src="images/event-picture-2.png"
+              alt="picture"
+              class="picture"
+            >
+          </div>
+          <div class="actuals__place--description actuals__block--order-1 grid__item--1-2 grid__item--tablet--1-4 grid__item--laptop--1-4">
+            <span class="actuals__place--event-name">ВИСТАВКА</span>
+            <span class="actuals__place--event-date">26.08-29.11.2019</span>
+            <h3 class="actuals__place--title">І спогади і мрії</h3>
+            <article class="actuals__place--article">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </article>
+          </div>
+        </div>
+
+        <div class="actuals__block actuals__block--3">
+          <div class="actuals__place--background">
+            <img
+              src="images/event-picture-3.png"
+              alt="picture"
+              class="picture-background"
+            >
+            <div class="actuals__place--event-block">
+              <div class="actuals__place--event-inner">
+                <span class="actuals__place--event-name">ЛЕКЦІЯ</span>
+                <span class="actuals__place--event-date">26/08/2019 - 11:00</span>
+                <h3 class="actuals__place--title-fixed">Від класицизму до романтизму</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__gallery gallery container" id="gallery">
+        <h2 class="gallery__title ">
+          Галерея
+        </h2>
+        <div class="gallery__pictures">
+          <img
+            src="images/gallery-picture-1.png"
+            alt="picture"
+            class="gallery__img gallery__img--1"
+          >
+          <img
+            src="images/gallery-picture-2.png"
+            alt="picture"
+            class="gallery__img gallery__img--2"
+          >
+          <img
+            src="images/gallery-picture-3.png"
+            alt="picture"
+            class="gallery__img gallery__img--3"
+          >
+          <img
+            src="images/gallery-picture-4.png"
+            alt="picture"
+            class="gallery__img gallery__img--4"
+          >
+          <img
+            src="images/gallery-picture-5.png"
+            alt="picture"
+            class="gallery__img gallery__img--5"
+            >
+          <img
+            src="images/gallery-picture-6.png"
+            alt="picture"
+            class="gallery__img gallery__img--6"
+          >
+        </div>
+        <nav class="gallery__slider-menu">
+          <div class="gallery__slider-menu--element"></div>
+          <div class="gallery__slider-menu--element"></div>
+          <div class="gallery__slider-menu--element"></div>
+          <div class="gallery__slider-menu--element"></div>
+        </nav>
+      </section>
+
+      <section class="page__signup signup" id="signup">
+        <h2 class="signup__title">Підписка </h2>
+        <div class="signup__text">Бути в курсі всіх актуальних подій та останніх новин. </div>
+        <form
+          action="#"
+          method="POST"
+          class="signup__form"
+        >
+          <label for="email">
+            <input
+              type="email"
+              name="email"
+              class="signup__input"
+              id="email"
+              placeholder="E-mail"
+              required>
+          </label>
+          <button type="submit" class="signup__btn"></button>
+        </form>
+      </section>
+
     </main>
-    <footer class="footer">
+    <footer class="footer container grid" id="footer">
+      <div class="footer__icons grid__item--1-2 grid__item--tablet--1-1 grid__item--laptop--1-1">
+        <div class="footer__icons--logo logo">
+          <p class="logo__text">NA<br>MU</p>
+        </div>
+        <div class="footer__icons--sm">
+          <div class="icon">
+            <a
+              href="https://www.facebook.com/namu.museum/about"
+              class="icon__fb"
+              rel="noopener"
+              target="_blank">
+            </a>
+          </div>
+          <div class="icon">
+            <a
+            href="https://www.instagram.com/namu.museum"
+            class="icon__insta"
+            rel="noopener"
+            target="_blank"
+            >
+            </a>
+          </div>
+        </div>
+      </div>
+      <article class="footer__content--schedule grid__item--1-1 grid__item--tablet--2-3 grid__item--laptop--3-4">
+        <p>Графік роботи</p>
+        <br>
+        <p>
+          <span class="footer__content-bold">12:00 — 20:00</span>  середа<br>
+          <span class="footer__content-bold">12:00 — 20:00</span>  четвер<br>
+          <span class="footer__content-bold">12:00 — 20:00</span>  п’ятниця<br>
+          <span class="footer__content-bold">11:00 — 19:00</span>  субота<br>
+          <span class="footer__content-bold">11:00 — 19:00</span> неділя
+        </p>
+        <br>
+        Вихідні понеділок, вівторок<br>
+        Каса припиняє роботу за 1 годину
+        до закриття музею
+      </article>
+      <article class="footer__content--contacts grid__item--2-2 grid__item--tablet--4-5 grid__item--laptop--5-6" id="contacts">
+        <p>Контакти</p>
+        <br>
+        <p>
+          <a
+            href="https://goo.gl/maps/epouh4f1LS35kWjo6"
+            target="_blank"
+            rel="noopener"
+            class="footer__content--link"
+          >
+            вул. М. Грушевського, 6;
+            <br>
+            Київ, 0100
+            <br>
+          </a>
+          тел.
+          <a href="tel:+38 (044) 278-13-57" class="footer__content--link">
+            +38 (044) 278-13-57
+          </a>
+          <br>
+          факс
+          <a href="tel:+38 (044) 278-13-54" class="footer__content--link">
+            +38 (044) 278-13-54
+          </a>
+          <br>
+          e-mail:
+          <a href="mailto:info@namu.kiev.ua" class="footer__content--link">
+            info@namu.kiev.ua
+          </a>
+        </p>
+      </article>
+      <div class="footer__content--line grid__item--1-2 grid__item--tablet--2-5 grid__item--laptop--7-7">
+        <a href="#header" class="footer__content--button"></a>
+      </div>
+      </div>
+      <nav class="footer__menu grid__item--1-2 grid__item--tablet--2-5 grid__item--laptop--8-11">
+        <ul class="footer__menu-block">
+          <li class="footer__menu-item">
+            <a href="#gallery" class="footer__menu-link">Галерея</a>
+          </li>
+          <li class="footer__menu-item">
+            <a href="#actuals" class="footer__menu-link">Виставки та події</a>
+          </li>
+          <li class="footer__menu-item">
+            <a href="#actuals" class="footer__menu-link">Відвідування</a>
+          </li>
+          <li class="footer__menu-item">
+            <a href="#signup" class="footer__menu-link">Стати нашим другом</a>
+          </li>
+        </ul>
+        <ul class="footer__menu-block">
+          <li class="footer__menu-item">
+            <a href="#header" class="footer__menu-link">Про нас</a>
+          </li>
+          <li class="footer__menu-item">
+            <a href="#header" class="footer__menu-link">Магазин</a>
+          </li>
+          <li class="footer__menu-item">
+            <a href="#header" class="footer__menu-link">Блог</a>
+          </li>
+          <li class="footer__menu-item">
+            <a href="#header" class="footer__menu-link">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+      <p class="footer__author grid__item--1-2 grid__item--tablet--1-6 grid__item--laptop--1-12">
+        <span class="footer__author--designed">Designed by Zhyriada Marina</span>
+        <span class="footer__author--rights">Copyright © 2019. All Rights Reserved.</span>
+      </p>
     </footer>
   </body>
 </html>
