--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,11 @@
   </head>
   <body class="main-content">
     <header class="header">
-      <!-- <div class="header__burger-logo-container">
+      <div class="header__burger-logo-container">
         <div class="header__burger">=</div>
-        <div class="header__logo">NAVU</div>
-      </div> -->
+        <div class="header__logo">NA<br>VU</div>
+        <div></div>
+      </div>
       <div class="header__ticket-title-container">
         <h1 class="header__title">ХУДОЖ<span class="header__text-opacity">НІЙ</span><br> МУЗЕЙ</h1>
         <div class="header__ticket">
@@ -83,6 +84,9 @@
       </div>
     </div>
     <main class="main-footer">
+      <div class="main-footer__header-title">
+        Галерея
+      </div>
       <div class="main-footer__galery">
         <img src="images/Rectangle 13.8.png"
           alt="photo"
@@ -108,6 +112,12 @@
           alt="photo"
           class="main-footer__galery-photo"
         >
+      </div>
+      <div class="main-footer__round-items">
+        <div class="main-footer__round-item"></div>
+        <div class="main-footer__round-item"></div>
+        <div class="main-footer__round-item"></div>
+        <div class="main-footer__round-item"></div>
       </div>
     </main>
     <div class="main-photo-footer">
