--- a/src/index.html
+++ b/src/index.html
@@ -237,26 +237,30 @@
               checked type="radio"
               name="slider"
               id="switch1"
+              class="gallery__slider-switcher"
             >
             <input
               type="radio"
               name="slider"
               id="switch2"
+              class="gallery__slider-switcher"
             >
             <input
               type="radio"
               name="slider"
               id="switch3"
+              class="gallery__slider-switcher"
             >
             <input
               type="radio"
               name="slider"
               id="switch4"
+              class="gallery__slider-switcher"
             >
             <div class="gallery__slides">
               <div class="gallery__overflow">
                 <div class="gallery__slides-images">
-                  <article>
+                  <article class="gallery__slides-images-image">
                     <a
                       href="http://namu.kiev.ua/assets/images/gallery/big/1359538503.jpg"
                       target="blank"
@@ -269,7 +273,7 @@
                       >
                     </a>
                   </article>
-                  <article>
+                  <article class="gallery__slides-images-image">
                     <a
                       href="http://namu.kiev.ua/assets/images/gallery/big/1243600643.jpg"
                       target="blank"
@@ -282,7 +286,7 @@
                       >
                     </a>
                   </article>
-                  <article>
+                  <article class="gallery__slides-images-image">
                     <a
                       href="http://namu.kiev.ua/assets/images/gallery/big/1243600221.jpg"
                       target="blank"
@@ -295,7 +299,7 @@
                       >
                     </a>
                   </article>
-                  <article>
+                  <article class="gallery__slides-images-image">
                     <a
                       href="http://namu.kiev.ua/assets/images/gallery/big/1243605093.jpg"
                       target="blank"
@@ -309,7 +313,7 @@
                     </a>
 
                   </article>
-                  <article>
+                  <article class="gallery__slides-images-image">
                     <a
                       href="http://namu.kiev.ua/assets/images/gallery/big/1359537866.jpg"
                       target="blank"
@@ -326,11 +330,11 @@
               </div>
             </div>
 
-            <div class="gallery__slider-active">
-              <label for="switch1"></label>
-              <label for="switch2"></label>
-              <label for="switch3"></label>
-              <label for="switch4"></label>
+            <div class="gallery__slider-on">
+              <label for="switch1" class="gallery__slider-on-lab"></label>
+              <label for="switch2" class="gallery__slider-on-lab"></label>
+              <label for="switch3" class="gallery__slider-on-lab"></label>
+              <label for="switch4" class="gallery__slider-on-lab"></label>
             </div>
           </div>
           <div class="gallery__desktop">
@@ -444,7 +448,6 @@
       </div>
 
     </main>
-
     <footer class="footer">
 
       <div class="footer__block">
