--- a/src/index.html
+++ b/src/index.html
@@ -16,30 +16,63 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__logoss" href="/">NA <br>MU</a>
-      <div class="header__1">
-        <div class="header__topss">
-          <div class="header__menuss"></div>
-          <h1 class="header__titless">ХУДОЖ<span class="header__modss">НІЙ</span><br> МУЗЕЙ</h1>
-          <div class="header__buyss">
-            <div class="header__textss">КВИТКИ</div>
-            <a href="/" class="header__storss">
-              <img src="../src/images/Vector(1).png" alt="buy">
-            </a>
-          </div>
-        </div>
-        <img
-            class="header__foto-topss "
-            src="./images/Natsionalnij.jpeg"
-            alt="background"
-          >
+      <div class="header__section">
+        ПОДІЇ
       </div>
-      <div class="header__2">
-        <div class="header__top">
-          <div class="header__menu"></div>
-          <a class="header__logo" href="/">NA <br>MU</a>
-        </div>
-        <h1 class="header__title">ХУДОЖНІЙ<br> МУЗЕЙ</h1>
+      <input type="button" class="header__burger cursor">
+      <nav class="header__menu">
+        <ul  class="header__list">
+          <li class="header__linke">
+            <a
+              data-goto="header"
+              href="#"
+              class="header__link"
+            >
+              Головна
+            </a>
+          </li>
+          <li class="header__linke">
+            <a
+              data-goto="main"
+              href="#"
+              class="header__link"
+            >
+              Про Нас
+            </a>
+          </li>
+          <li class="header__linke">
+            <a
+              data-goto="main"
+              href="#2"
+              class="header__link"
+            >
+              Галерея
+            </a>
+          </li>
+          <li class="header__linke">
+            <a
+              data-goto="footer"
+              href="#"
+              class="header__link"
+            >
+              Екскурсії
+            </a>
+          </li>
+          <li class="header__linke">
+            <a
+              href="tel:+38(044)278-13-57"
+              class="header__link header__link--size"
+            >
+              тел. +38 (044) 278-13-57
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__top">
+        <a class="header__logo" href="/">NA <br>MU</a>
+      </div>
+      <div class="header__bottom">
+        <h1 class="header__title">ХУДОЖ<span class="header__modss">НІЙ</span><br> МУЗЕЙ</h1>
         <div class="header__buy">
           <div class="header__text">КВИТКИ</div>
           <a href="/" class="header__stor">
@@ -150,6 +183,68 @@
             <div class="img-slider__slide swiper-slide">
               <div class="img-slider__imege">
                 <img src="./images/Rectangle11.jpeg" alt="Картина">
+              </div>
+            </div>
+          </div>
+          <div class="img-slider__swiper-pagination" >
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+
+        <div class="img-slider swiper-container mySwiper--2">
+          <div class="img-slider__wraper swiper-wrapper">
+            <div class="img-slider__slide swiper-slide">
+              <div class="img-slider__imege">
+                <img
+                  class="img-slider__imeges"
+                  src="./images/Rectangle6.jpg"
+                  alt="Картина"
+                  >
+              </div>
+            </div>
+            <div class="img-slider__slide swiper-slide">
+              <div class="img-slider__imege">
+                <img
+                  class="img-slider__imeges"
+                  src="./images/Rectangle7.jpg"
+                  alt="Картина"
+                  >
+              </div>
+            </div>
+            <div class="img-slider__slide swiper-slide">
+              <div class="img-slider__imege">
+                <img
+                  class="img-slider__imeges"
+                  src="./images/Rectangle8.jpeg"
+                  alt="Картина"
+                  >
+              </div>
+            </div>
+            <div class="img-slider__slide swiper-slide">
+              <div class="img-slider__imege">
+                <img
+                  class="img-slider__imeges"
+                  src="./images/Rectangle9.jpg"
+                  alt="Картина"
+                  >
+              </div>
+            </div>
+            <div class="img-slider__slide swiper-slide">
+              <div class="img-slider__imege">
+                <img
+                  class="img-slider__imeges"
+                  src="./images/Rectangle10.jpg"
+                   alt="Картина
+                   ">
+              </div>
+            </div>
+            <div class="img-slider__slide swiper-slide">
+              <div class="img-slider__imege">
+                <img
+                  class="img-slider__imeges"
+                  src="./images/Rectangle11.jpeg
+                  " alt="Картин
+                  а">
               </div>
             </div>
           </div>
@@ -270,6 +365,17 @@
     <script>
       var swiper = new Swiper(".mySwiper", {
         spaceBetween: 30,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+          dynamicBullets: true,
+        },
+      });
+
+      var swiper = new Swiper(".mySwiper--2", {
+        slidesPerView: 4,
+        spaceBetween: 30,
+        centeredSlides: true,
         pagination: {
           el: ".swiper-pagination",
           clickable: true,
