--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,13 @@
         </ul>
       </nav>
       <div class="header__top">
-        <a class="header__logo" href="/">NA <br>MU</a>
+        <a
+          target="blank"
+          class="header__logo"
+          href="https://artem-chornyi.github.io/Museum/"
+        >
+          NA <br>MU
+        </a>
       </div>
       <div class="header__bottom">
         <h1 class="header__title">ХУДОЖ<span class="header__modss">НІЙ</span><br> МУЗЕЙ</h1>
