--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,9 @@
         <div class="header__wrapper">
           <label for="burger-icon" class="header__burger"></label>
         </div>
-        <a href="#about-us">
+        <div>
           <span class="logo header__logo" id="home"></span>
-        </a>
+        </div>
       </div>
 
       <nav class="nav header__nav">
@@ -295,12 +295,22 @@
             <div class="logo footer__logo"></div>
           </a>
           <div class="footer__media-links">
-            <a href="https://facebook.com" class="footer__media-link">
+            <a
+              href="https://facebook.com"
+              class="footer__media-link"
+              target="_blank"
+              rel="noopener"
+            >
               <img
                 src="./images/facebook-logo.png" alt="facebook-logo"
               >
             </a>
-            <a href="https://instagram.com" class="footer__media-link">
+            <a
+              href="https://instagram.com"
+              class="footer__media-link"
+              target="_blank"
+              rel="noopener"
+            >
               <img src="./images/instagram-logo.png" alt="instagram-logo">
             </a>
           </div>
